--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -190,7 +190,7 @@
                 <div class="col-12 col-md-6 col-lg-5">
                   <div class="drag-and-drop-box js-drag-and-drop-box">
                     <div class="drag-and-drop-box__label dz-message"><span class="drag-and-drop-box__label-title">Drag and drop files</span>
-                      <button class="button button--squere button--bg-alabaster drag-and-drop-box__label-button" type="button">
+                      <button class="button button--bg-alabaster button--size-60 drag-and-drop-box__label-button" type="button">
                         <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
                           <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
                         </svg>
