--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -128,7 +128,7 @@
         <div class="settings-page__catalog">
           <div class="catalog">
             <div class="catalog__tabs tabs js-tabs">
-              <div class="catalog__tab js-tabs-tab " data-tab="general">
+              <div class="catalog__tab js-tabs-tab is-active" data-tab="general">
                 <div class="catalog__tab-title">General</div>
               </div>
               <div class="catalog__tab js-tabs-tab " data-tab="education">
@@ -137,12 +137,12 @@
               <div class="catalog__tab js-tabs-tab " data-tab="services">
                 <div class="catalog__tab-title">Services &amp; prices</div>
               </div>
-              <div class="catalog__tab js-tabs-tab is-active" data-tab="notifications">
+              <div class="catalog__tab js-tabs-tab " data-tab="notifications">
                 <div class="catalog__tab-title">Notifications</div>
               </div>
             </div>
             <div class="catalog__content">
-              <div class="catalog__content-item tabs__content js-tabs-content" data-content="general">
+              <div class="catalog__content-item tabs__content js-tabs-content is-active" data-content="general">
                 <div class="settings-general">
                   <div class="settings-general__wrap">
                     <div class="settings-general__avatar">
@@ -746,7 +746,7 @@
                   <div class="settings-services__footer"><span class="settings-services__footer-text">Have you learn to do new services?<br/> <a href="#" class="text-boston-blue">Contact<a/> the project manager to update your pricing & services list.</span></div>
                 </div>
               </div>
-              <div class="catalog__content-item tabs__content js-tab-content is-active" data-content="notifications">
+              <div class="catalog__content-item tabs__content js-tab-content" data-content="notifications">
                 <div class="settings-notifications">
                   <div class="settings-notifications__heading">
                     <h3>Send email notification to <a href="#" class="text-boston-blue">info@vertimukaraliai.lt</a> when...</h3>
