upload-documents component was added

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -114,7 +114,7 @@
         </div>
       </header>
     </div>
-    <div class="container">
+    <div class="wrapper">
       <div class="settings-page__wrap">
         <div class="settings-page__title">
           <h2 class="text-surfie-green">Settings</h2>
@@ -128,10 +128,10 @@
         <div class="settings-page__catalog">
           <div class="catalog">
             <div class="catalog__tabs tabs js-tabs">
-              <div class="catalog__tab js-tabs-tab is-active" data-tab="general">
+              <div class="catalog__tab js-tabs-tab " data-tab="general">
                 <div class="catalog__tab-title">General</div>
               </div>
-              <div class="catalog__tab js-tabs-tab " data-tab="education">
+              <div class="catalog__tab js-tabs-tab is-active" data-tab="education">
                 <div class="catalog__tab-title">Education &amp; Files</div>
               </div>
               <div class="catalog__tab js-tabs-tab " data-tab="services">
@@ -142,7 +142,7 @@
               </div>
             </div>
             <div class="catalog__content">
-              <div class="catalog__content-item tabs__content js-tabs-content is-active" data-content="general">
+              <div class="catalog__content-item tabs__content js-tabs-content" data-content="general">
                 <div class="settings-general">
                   <div class="settings-general__wrap">
                     <div class="settings-general__avatar">
@@ -152,13 +152,13 @@
                         </div>
                         <div class="settings-general__avatar-button">
                           <button class="button button--round button--bg-alabaster button--size-50" type="button">
-                            <svg class="svg-icon svg-icon--boston-blue" width="s18" height="16">
+                            <svg class="svg-icon svg-icon--boston-blue" width="18" height="16">
                               <use href="images/svg/svg-sprite/symbol/sprite.svg#camera" x="0" y="0"></use>
                             </svg>
                           </button>
                         </div>
                       </div>
-                      <div class="settings-general__avatar-date">
+                      <div class="ettings-general__avatar-date">
                         <p class="p-sm">Member since: 2015-04-12</p>
                       </div>
                       <div class="settings-general__avatar-password"><a class="link" href="#">Change password</a>
@@ -180,7 +180,7 @@
                       <div class="info-list">
                         <div class="info-list__item">
                           <div class="info-list__left">
-                            <p class="font-semibold text-silver-chalice">Accoun type:</p>
+                            <div class="font-semibold text-silver-chalice">Accoun type:</div>
                           </div>
                           <div class="info-list__right">
                             <p class="font-semibold ">Employer</p>
@@ -188,7 +188,7 @@
                         </div>
                         <div class="info-list__item">
                           <div class="info-list__left">
-                            <p class="font-semibold text-silver-chalice">Name:</p>
+                            <div class="font-semibold text-silver-chalice">Name:</div>
                           </div>
                           <div class="info-list__right">
                             <p class="font-semibold ">Vaidotas Rimeikis</p>
@@ -196,7 +196,7 @@
                         </div>
                         <div class="info-list__item">
                           <div class="info-list__left">
-                            <p class="font-semibold text-silver-chalice">Email:</p>
+                            <div class="font-semibold text-silver-chalice">Email:</div>
                           </div>
                           <div class="info-list__right">
                             <p class="font-semibold ">lj.baranauskas@gmail.com</p>
@@ -204,7 +204,7 @@
                         </div>
                         <div class="info-list__item">
                           <div class="info-list__left">
-                            <p class="font-semibold text-silver-chalice">Phone:</p>
+                            <div class="font-semibold text-silver-chalice">Phone:</div>
                           </div>
                           <div class="info-list__right">
                             <p class="font-semibold ">+3706891864</p>
@@ -212,7 +212,7 @@
                         </div>
                         <div class="info-list__item">
                           <div class="info-list__left">
-                            <p class="font-semibold text-silver-chalice">Native:</p>
+                            <div class="font-semibold text-silver-chalice">Native:</div>
                           </div>
                           <div class="info-list__right">
                             <p class="font-semibold ">Lithuanian</p>
@@ -220,7 +220,7 @@
                         </div>
                         <div class="info-list__item">
                           <div class="info-list__left">
-                            <p class="font-semibold text-silver-chalice">Address:</p>
+                            <div class="font-semibold text-silver-chalice">Address:</div>
                           </div>
                           <div class="info-list__right">
                             <p class="font-semibold text-boston-blue">Adres 5g.</p>
@@ -228,7 +228,7 @@
                         </div>
                         <div class="info-list__item">
                           <div class="info-list__left">
-                            <p class="font-semibold text-silver-chalice">Zip code:</p>
+                            <div class="font-semibold text-silver-chalice">Zip code:</div>
                           </div>
                           <div class="info-list__right">
                             <p class="font-semibold ">LT-4421</p>
@@ -236,7 +236,7 @@
                         </div>
                         <div class="info-list__item">
                           <div class="info-list__left">
-                            <p class="font-semibold text-silver-chalice">City:</p>
+                            <div class="font-semibold text-silver-chalice">City:</div>
                           </div>
                           <div class="info-list__right">
                             <p class="font-semibold ">Vilnius</p>
@@ -244,7 +244,7 @@
                         </div>
                         <div class="info-list__item">
                           <div class="info-list__left">
-                            <p class="font-semibold text-silver-chalice">Country:</p>
+                            <div class="font-semibold text-silver-chalice">Country:</div>
                           </div>
                           <div class="info-list__right">
                             <p class="font-semibold ">Lithuania</p>
@@ -252,7 +252,7 @@
                         </div>
                         <div class="info-list__item">
                           <div class="info-list__left">
-                            <p class="font-semibold text-silver-chalice">Birth day:</p>
+                            <div class="font-semibold text-silver-chalice">Birth day:</div>
                           </div>
                           <div class="info-list__right">
                             <p class="font-semibold ">2019-04-01</p>
@@ -260,7 +260,7 @@
                         </div>
                         <div class="info-list__item">
                           <div class="info-list__left">
-                            <p class="font-semibold text-silver-chalice">Additional:</p>
+                            <div class="font-semibold text-silver-chalice">Additional:</div>
                           </div>
                           <div class="info-list__right">
                             <p class="font-semibold ">Sample sample sample sample sample sample</p>
@@ -335,14 +335,14 @@
                   </div>
                 </div>
               </div>
-              <div class="catalog__content-item tabs__content js-tab-content" data-content="education">
+              <div class="catalog__content-item tabs__content js-tab-content is-active" data-content="education">
                 <div class="settings-education">
                   <div class="settings-education__wrap">
                     <div class="settings-education__col">
                       <div class="settings-education__heading">
                         <div class="row-group row-group--align-center">
                           <div class="row-group__item">
-                            <h4>General information:</h4>
+                            <h4>Education:</h4>
                           </div>
                           <div class="row-group__item"><a class="inline-button inline-button--boston-blue" href="#"><span class="inline-button__icon">
                                                     <svg class="svg-icon svg-icon--boston-blue" width="12" height="12">
@@ -435,7 +435,7 @@
                       </div>
                     </div>
                     <div class="settings-education__col">
-                      <div class="settings-education__heading">
+                      <div class="settings-education__heading settings-education__heading--alt">
                         <div class="row-group row-group--align-center">
                           <div class="row-group__item">
                             <h4>Skills:</h4>
@@ -489,7 +489,7 @@
                       </div>
                     </div>
                     <div class="settings-education__col">
-                      <div class="settings-education__heading">
+                      <div class="settings-education__heading settings-education__heading--alt">
                         <div class="row-group row-group--align-center">
                           <div class="row-group__item">
                             <h4>Expertise:</h4>
@@ -543,12 +543,12 @@
                       </div>
                     </div>
                     <div class="settings-education__upload">
-                      <div class="uploaded-documents">
-                        <div class="uploaded-documents__header">
-                          <div class="uploaded-documents__header-title">
+                      <div class="upload-documents">
+                        <div class="upload-documents__header">
+                          <div class="upload-documents__header-title">
                             <h4>Uploaded documents:</h4>
                           </div>
-                          <div class="uploaded-documents__header-button">
+                          <div class="upload-documents__header-button">
                             <button class="button button--bg-white button--shadowed" type="button"><span>Download all</span><span class="button__icon">
                                                                       <svg class="svg-icon" width="21" height="19">
                                                                         <use href="images/svg/svg-sprite/symbol/sprite.svg#download" x="0" y="0"></use>
@@ -556,8 +556,31 @@
                             </button>
                           </div>
                         </div>
-                        <div class="uploaded-documents__content">
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione excepturi omnis eveniet ut. Voluptatem esse exercitationem enim? Enim, obcaecati eius? Doloribus consequatur, officia dolores blanditiis distinctio perspiciatis optio a quos?</p>
+                        <div class="upload-documents__content">
+                          <div class="upload-documents-box js-upload-documents-box">
+                            <div class="upload-documents-box__label dz-message"><span class="upload-documents-box__label-title">Drag and drop files</span>
+                              <button class="button button--bg-alabaster button--size-60 upload-documents-box__label-button" type="button">
+                                <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
+                                  <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                                </svg>
+                              </button>
+                            </div>
+                            <div class="upload-documents-box__tpl">
+                              <div class="document-list-item">
+                                <div class="document-list-item__progress" data-dz-uploadprogress></div>
+                                <div class="document-list-item__icon"><img src="images/icons/document-placeholder.svg" alt="placeholder"></div>
+                                <div class="document-list-item__title" data-dz-name></div>
+                                <div class="document-list-item__delete">
+                                  <svg class="svg-icon svg-icon--brick-red" width="10" height="10" data-dz-remove="data-dz-remove">
+                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#close" x="0" y="0"></use>
+                                  </svg>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="upload-documents-box__preview">
+                              <div class="custom-scroll custom-scroll--scroll-visible upload-documents-box__preview-scroll" data-simplebar></div>
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </div>
