--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -187,29 +187,45 @@
             </div>
             <div class="application-form__card-line">
               <div class="row">
-                <div class="col-12 col-md-6 col-lg-5">
-                  <div class="drag-and-drop-box js-drag-and-drop-box">
-                    <div class="drag-and-drop-box__label dz-message"><span class="drag-and-drop-box__label-title">Drag and drop files</span>
-                      <button class="button button--bg-alabaster button--size-60 drag-and-drop-box__label-button" type="button">
-                        <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
-                          <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                        </svg>
-                      </button>
-                    </div>
-                    <div class="drag-and-drop-box__tpl">
-                      <div class="document-list-item">
-                        <div class="document-list-item__progress" data-dz-uploadprogress></div>
-                        <div class="document-list-item__icon"><img src="images/icons/document-placeholder.svg" alt="placeholder"></div>
-                        <div class="document-list-item__title" data-dz-name></div>
-                        <div class="document-list-item__delete">
-                          <svg class="svg-icon svg-icon--brick-red" width="10" height="10" data-dz-remove="data-dz-remove">
-                            <use href="images/svg/svg-sprite/symbol/sprite.svg#close" x="0" y="0"></use>
-                          </svg>
-                        </div>
+                <div class="col-12 col-lg-8">
+                  <div class="upload-documents">
+                    <div class="upload-documents__header">
+                      <div class="upload-documents__header-title">
+                        <h4>Uploaded documents:</h4>
+                      </div>
+                      <div class="upload-documents__header-button">
+                        <button class="button button--bg-white button--shadowed" type="button"><span>Download all</span><span class="button__icon">
+                                              <svg class="svg-icon" width="21" height="19">
+                                                <use href="images/svg/svg-sprite/symbol/sprite.svg#download" x="0" y="0"></use>
+                                              </svg></span>
+                        </button>
                       </div>
                     </div>
-                    <div class="drag-and-drop-box__preview">
-                      <div class="custom-scroll custom-scroll--scroll-visible drag-and-drop-box__preview-scroll" data-simplebar></div>
+                    <div class="upload-documents__content">
+                      <div class="upload-documents-box js-upload-documents-box">
+                        <div class="upload-documents-box__label dz-message"><span class="upload-documents-box__label-title">Drag and drop files</span>
+                          <button class="button button--bg-alabaster button--size-60 upload-documents-box__label-button" type="button">
+                            <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
+                              <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                            </svg>
+                          </button>
+                        </div>
+                        <div class="upload-documents-box__tpl">
+                          <div class="document-list-item">
+                            <div class="document-list-item__progress" data-dz-uploadprogress></div>
+                            <div class="document-list-item__icon"><img src="images/icons/document-placeholder.svg" alt="placeholder"></div>
+                            <div class="document-list-item__title" data-dz-name></div>
+                            <div class="document-list-item__delete">
+                              <svg class="svg-icon svg-icon--brick-red" width="10" height="10" data-dz-remove="data-dz-remove">
+                                <use href="images/svg/svg-sprite/symbol/sprite.svg#close" x="0" y="0"></use>
+                              </svg>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="upload-documents-box__preview">
+                          <div class="custom-scroll custom-scroll--scroll-visible upload-documents-box__preview-scroll" data-simplebar></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
